# zier-lang

./: .gitignore  Cargo.toml  README.md  codebook.toml
.github/workflows/: deploy-book.yml  rust.yml
bahn/: Cargo.toml
bahn/src/: build.rs  clean.rs  compile_flow.rs  deps.rs  format.rs  gitignore.rs  main.rs  manifest.rs  new.rs  release.rs  test.rs  ui.rs  utils.rs
book/: book.toml
book/src/: SUMMARY.md  bahn.md  currying.md  erlang_ffi.md  functions.md  getting_started.md  if_else.md  imports.md  installation.md  language_tour.md  lists.md  local_bindings.md  loupe.md  match.md  pipe.md  primitive_types.md  roadmap.md  testing.md  the_mond_programming_language.md  the_opal_programming_languge.md  the_standard_library.md  types.md
loupe/: Cargo.toml
loupe/src/: build.rs  clean.rs  format.rs  gitignore.rs  main.rs  manifest.rs  new.rs  release.rs  test.rs  utils.rs
mond-format/src/: pretty.rs  tests.rs
mond-lsp/: Cargo.toml
mond-lsp/src/: analysis.rs  backend.rs  lib.rs  project.rs  semantic_tokens.rs  state.rs  tests.rs
mond-std/src/: lib.mond
mond/src/: build.rs  deps.rs  main.rs  manifest.rs  release.rs  test.rs  utils.rs
mondc/: Cargo.toml
mondc/src/: ast.rs  codegen.rs  compiler.rs  hir.rs  lexer.rs  lib.rs  lower.rs  main.rs  pipeline.rs  project.rs  query.rs  tests.rs  typecheck.rs  typing.rs  warnings.rs
mondc/src/lower/: bindings.rs  declarations.rs  expr.rs  matching.rs  mod.rs  pipe.rs  records.rs  tests.rs  types.rs
mondc/src/typecheck/: checker.rs  core.rs  env.rs  mod.rs  tests.rs
opal-cli/: Cargo.toml
opal-cli/src/: main.rs
opal-core/: Cargo.toml
opal-core/src/: ast.rs  lexer.rs  lib.rs  lower.rs  sexpr.rs
opal-core/src/typecheck/: mod.rs
opal-format/: Cargo.toml
opal-format/src/: doc.rs  lib.rs  pretty.rs  tests.rs
opal-lsp/: Cargo.toml
opal-std/: .gitignore
opal-std/src/: lib.opal  map.opal  opal_string_helpers.erl  opal_testing_helpers.erl  option.opal  result.opal  string.opal  testing.opal
opal-std/tests/: string_test.opal
opalc/: Cargo.toml
opalc/src/: ast.rs  codegen.rs  ir.rs  lexer.rs  lib.rs  lower.rs  sexpr.rs  typecheck.rs
opalc/src/typecheck/: mod.rs
samples/errors/: access_a_field_that_does_not_exist.mond  access_a_field_that_does_not_exist.opal  apply_non_function.opal  comparison_with_float.opal  equality_type_mismatch.opal  field_access_on_non_record.mond  field_access_on_non_record.opal  float_int_mixing.opal  if_branch_mismatch.opal  if_condition_not_bool.opal  infinite_type.opal  int_op_with_float.opal  let_binding_odd_count.opal  let_missing_braces.opal  match_arm_type_mismatch.mond  match_arm_type_mismatch.opal  match_missing_arrow.opal  rec_keyword_removed.opal  string_concat_wrong_type.opal  top_level_local_binding.opal  type_mismatch_arithmetic.opal  unbound_variable.opal  unknown_field.mond  unknown_field.opal  variant_lowercase_constructor.mond  variant_lowercase_constructor.opal  variant_spurious_atom.mond  variant_spurious_atom.opal
samples/valid/: all_features.mond  extern.opal  generic_record.mond  generic_record.opal  hello.opal  implicit_seq.mond  implicit_seq.opal  let_bind.mond  let_bind.opal  match_destrucutre.mond  match_destrucutre.opal  result_test.mond  result_test.opal  simple.opal
zier/: Cargo.toml
zier-lsp/: Cargo.toml
zier-lsp/src/: lib.rs  main.rs
zier-std/src/: charlist.zier  io.zier  lib.zier  result.zier  string.zier  testing.zier  zier_io_helpers.erl
zier-std/tests/: charlist_test.zier  list_test.zier
zier/src/: main.rs
zierc/src/: ast.rs  lib.rs  lower.rs  typecheck.rs
