[workspace]
resolver = "2"
members = ["mondc", "mond-lsp", "bahn", "mond-format"]

[workspace.package]
edition = "2024"
version = "0.0.19"

[workspace.dependencies]
codespan-reporting = "0.13"
clap = "4.5.60"
eyre = "0.6.12"
include_dir = "0.7"
logos = "0.16"
toml = "1.0"
toml_edit = "0.22.27"
serde = { version = "1", features = ["derive"] }
tower-lsp = "0.20.0"
semver = "1.0.27"
walkdir = "2.5.0"
