[package]
name = "loupe"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true , features = ["derive"] }
eyre = { workspace = true }
opalc = { path = "../opalc" }
opal-format = { path = "../opal-format" }
include_dir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, features = [ "serde" ] }
walkdir = { workspace = true }
