[package]
name = "mond-lsp"
edition.workspace = true
version.workspace = true

[dependencies]
tower-lsp = { workspace = true }
codespan-reporting = { workspace = true }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
mondc = { path = "../mondc" }
mond-format = { path = "../mond-format" }
toml = { workspace = true }
serde_json = "1"
