[package]
name = "zier"
edition.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true , features = ["derive"] }
eyre = { workspace = true }
zierc = { path = "../zierc" }
zier-format = { path = "../zier-format" }
include_dir = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, features = [ "serde" ] }
walkdir = { workspace = true }
codespan-reporting = { workspace = true }
tokio = { version = "1", features = ["io-std", "rt-multi-thread"] }
zier-lsp = { path = "../zier-lsp" }
